# pytest-webstage

./: README.md  pyproject.toml  webstage.toml
docs/: manual.md
pytest_webstage/: __init__.py  conf.py  plugin.py  tools.py  webstage.py
tests/: test_browsers.py
