[tool.poetry]
name = "pytest-webstage"
version = "1.0.0"
description = "Test web apps with pytest"
authors = ["thislight <l1589002388@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.24.0"
pytest = ">=7.0,<9.0"
pydantic = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
black = "^24.8.0"

[tool.poetry.scripts]
webstage = "pytest_webstage.tools:webstage"

[tool.poetry.plugins."pytest11"]
webstage = "pytest_webstage.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
